<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 기본 -->
    <string name="app_name">학생자치법정</string>

    <!-- 메뉴 -->
    <string name="menu_newsfeed">홍보영상</string>
    <string name="menu_about">소개</string>
    <string name="menu_faq">자주 물어보는 질문</string>
    <string name="menu_settings">어플리케이션 설정</string>

    <!-- temp -->
    <string name="question_where"><b>너는 지금 꿈을 위해 어디까지 왔니?</b></string>
    <string name="question_how"><b>너는 지금까지 어떤 공부를 해왔니?</b></string>
    <string name="question_else"><b>그럼 공부 말고 다른 것은?</b></string>
    <string name="question_what"><b>네가 다시 중고딩이 되면 뭘 할 거 같니?</b></string>
    <string name="question_open"><b>여는 글</b></string>
    <string name="question_close"><b>닫는 글</b></string>

    <!-- about -->
    <string name="about_info_label"><b>학생자치법정소개</b></string>
    <string name="about_info">\'학생자치법정\'은 법무부에서 개발한 대표적인 법교육 프로그램입니다. 학생자치법정 시범학교 운영 사업은 2006년도 1월부터 학생자치법정 시범학교 5개교를 시작으로 운영하였고, 선정된 학교에서는 학교장의 적극적인 지원과 담당교사의 열의, 그리고 학생들의 높은 호응을 받았습니다. 그로 인해 학생자치법정을 시행하는 학교의 수는 헤아리기 힘들 정도입니다. 이와 같은 확대와 더불어 학생자치법정프로그램은 교내에서 성공적인 교내 학생생활지도 프로그램으로서 자리매김하게 되었습니다.\n\n\'학생자치법정\'이라는 말을 처음 들으면 단순히 학생들 간에 처벌하는 것이 아닌가 라는 생각을 합니다. 그러나 학생자치법정은 교칙 위반에 대해 학생이 학생을 처벌하는 단죄의 자리가 아니라 각기 다른 사정과 이유를 지닌 학생들의 이야기를 듣고 그 사정을 이해하며 서로 대화를 나누기 위해 개발되었으며 학생 생활지도 면에서 탁월한 성과를 나타내고 있는 법교육 프로그램입니다.</string>
    <string name="about_aim_label"><b>운영목표</b></string>
    <string name="about_aim">* 학생들이 스스로 교칙에 대한 자정활동을 할 수 있다.\n*학생들이 학생자치법정의 구성원이 되어 자율적으로 운영할 수 있도록 마련해 준다.</string>
    <string name="about_direction_label"><b>방향</b></string>
    <string name="about_direction">방향에 대한 설명이 주르르윽</string>
    <string name="about_effect_label"><b>효과</b></string>
    <string name="about_effect">(1) 징계를 받는 학생들의 교사에 대한 불신이 사라져 학생과 교사간의 더욱 돈독한 관계를 형성할 수 있습니다.\n(2) 생활지도에 대한 어려움과 부담을 학생자치법정 시행으로 확실히 덜 수 있습니다.\n(3) 일방적인 교사의 징계가 아닌 법정 구성원들간의 많은 토론을 통해 내려지는 학생자치법정의 과정이 학생들에게 주인의식을 심어줍니다.\n(4) 과벌점학생에게 자신의 입장에 대해 이야기 할 수 있는 기회가 부여됨으로써 긍정적 처벌에 대한 정당성을 가질 수 있습니다.</string>

    <!-- Faq -->
    <string name="faq_q1">faq q1</string>
    <string name="faq_a1">faq a1</string>
    <string name="faq_q2">faq q2</string>
    <string name="faq_a2">faq a2</string>
    <string name="faq_q3">faq q3</string>
    <string name="faq_a3">faq a3</string>
    <string name="faq_q4">faq q4</string>
    <string name="faq_a4">faq a4</string>
    <string name="faq_q5">faq q5</string>
    <string name="faq_a5">faq a5</string>
    <string name="faq_q6">faq q6</string>
    <string name="faq_a6">faq a6</string>
    <string name="faq_q7">faq q7</string>
    <string name="faq_a7">faq a7</string>
    <string name="faq_q8">faq q8</string>
    <string name="faq_a8">faq a8</string>
    <string name="faq_q9">faq q9</string>
    <string name="faq_a9">faq a9</string>
    <string name="faq_q10">faq q10</string>
    <string name="faq_a10">faq a10</string>

</resources>